--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
 	"compilerOptions": {
 		"target": "ES2020",
 		"module": "CommonJS",
-		"lib": ["ES2020"],
+		"lib": [
+			"ES2020"
+		],
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"strict": true,
@@ -24,8 +26,16 @@
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
+	"include": [
+		"src/**/*"
+	],
+	"exclude": [
+		"node_modules",
+		"dist",
+		"**/*.test.ts",
+		"**/*.spec.ts",
+		"coverage"
+	],
 	"ts-node": {
 		"esm": false
 	}
